# acgt

./: .gitignore  acgt.k  acgt.q  ghostwriter.txt  pyproject.toml  times.txt
acgt/: Cargo.toml
acgt/src/: main.rs
apl/: README.md  acgt.apl
coalton/: README.md  acgt.asd  acgt.lisp  driver.lisp  makefile  package.lisp  packages.lisp
common-lisp/: README.md  acgt.asd  acgt.lisp  driver.lisp  makefile  package.lisp  packages.lisp
haskell/: Main.hs  README.md  acgt.cabal  cabal.project
julia/: README.md  acgt.jl
k/: README.md  acgt.k
mojo/: .gitignore  README.md  acgt.mojo  pixi.toml
presentation/: README.md  seq_to_par.diff  sizes.txt  times.txt
python/acgt/: README.md  pyproject.toml
python/acgt/src/acgt/: acgt.py  data.py  par.py  seq.py
python/acgt/tests/: test_commutative_monoid.py  test_roundtrip.py
q/: README.md  acgt.q
rust/acgt/: Cargo.toml
rust/acgt/src/: main.rs
src/acgt/: __init__.py  acgt.py  data.py
