[project]
name = "acgt"
version = "0.1.0"
description = "A silly example, intended to show how algebraic structure (commutative monoids) can yield computational benefits (map-shuffle-reduce parallelism)."
authors = [
    { name = "Graham Enos", email = "graham@strangeworks.com" }
]
dependencies = [
    "pyprojroot~=0.3.0",
    "ray~=2.21.0",
    "typer[all]~=0.12.3",
]
readme = "README.md"
requires-python = ">=3.11,<3.12"

[project.scripts]
data = "acgt.data:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "hypothesis~=6.100.6",
    "ipython~=8.24.0",
    "pyright~=1.1.362",
    "pytest~=8.2.0",
    "ruff~=0.4.4",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/acgt"]
