[project]
name = "acgt"
version = "0.1.0"
description = "A silly example, intended to show how algebraic structure (commutative monoids) can yield computational benefits (map-shuffle-reduce parallelism)."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyprojroot>=0.3.0",
    "ray>=2.52.1",
    "typer>=0.20.0",
]

[project.scripts]
data = "acgt.data:cli"

[dependency-groups]
dev = [
    "hypothesis>=6.148.7",
    "ipython>=9.8.0",
    "pyright>=1.1.407",
    "pytest>=9.0.2",
    "ruff>=0.14.9",
    "ty>=0.0.1a34",
]

[build-system]
requires = ["uv_build>=0.9.11,<0.10.0"]
build-backend = "uv_build"
