[project]
name = "acgt"
version = "0.2.0"
description = "A silly example, intended to show how algebraic structure (commutative monoids) can yield computational benefits (map-shuffle-reduce parallelism)."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyprojroot>=0.3.0",
    "ray>=2.53.0",
    "typer>=0.21.1",
]

[project.scripts]
data = "acgt.data:cli"

[dependency-groups]
dev = [
    "hypothesis>=6.151.4",
    "ipython>=9.10.0",
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "ruff>=0.14.14",
    "ty>=0.0.14",
]

[build-system]
requires = ["uv_build>=0.9.11,<0.10.0"]
build-backend = "uv_build"
